--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,7 +3,7 @@
 {% block content %}
         <div class="container">
             <div class="card p-3 mb-2 rounded shadow">
-                <h2 class="ps-3"><a class="card-title text-decoration-none" href="">{{ post.title }}</a></h2>
+                <h3 class="ps-3"><a class="card-title text-decoration-none" href="">{{ post.title }}...</a></h3>
                 <hr>
                 <p class="card-body">{{ post.body }}</p>
             </div>
