--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,4 +5,12 @@ h1 a{
 
 p {
     text-indent: 30px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.425);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: large;
+    font-weight: 500;
+}
+
+h4 {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.425);
 }
