--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,6 +6,8 @@
                 <h4 class="ps-3"><a class="card-title text-decoration-none" href="">{{ post.title }}...</a></h4>
                 <hr>
                 <p class="card-body">{{ post.body }}</p>
+                <hr>
+                <a class="btn btn-alert" href="">Редактировать</a>
             </div>
         </div>
 {% endblock %}
