--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,8 @@
                 <h4 class="ps-3"><a class="card-title text-decoration-none" href="{% url 'detail' post.pk %}">{{ post.title }}</a></h4>
                 <hr>
                 <p class="card-body">{{ post.body }}</p>
+                <hr>
+                <a class="btn btn-alert" href="{% url 'edit' post.pk %}">Редактировать</a>
             </div>
         </div>
     {% endfor %}
