--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                 <h1 class="ps-3 pe-3 mt-3 mb-4 "><a class="text-decoration-none" href="/">Django Blog</a></h1>
             </div>
             <div class="new_post d-flex align-items-center pe-3">
-                <a class="btn btn-primary pe-3 ps-3"  href="/post/new/">Добавить</a>
+                <a class="btn btn-success pe-3 ps-3"  href="/post/new/">Добавить</a>
             </div>
         </div>
     </header>
