--- a/templates/create.html
+++ b/templates/create.html
@@ -5,7 +5,7 @@
         <h4 class="primary">New Post</h4>
         <form action="" method="post">{% csrf_token %}
             {{ form.as_p }}
-            <input class="btn btn-primary" type="submit" value="Сохранить">
+            <input class="btn btn-success" type="submit" value="Сохранить">
         </form>
     </div>
 {% endblock %}
