--- a/templates/detail.html
+++ b/templates/detail.html
@@ -7,7 +7,10 @@
                 <hr>
                 <p class="card-body">{{ post.body }}</p>
                 <hr>
-                <a class="btn btn-alert" href="">Редактировать</a>
+                <div class="container d-flex justify-content-between">
+                    <a class="btn btn-danger pe-3 ps-3"  href="{% url 'delete' post.pk %}">Удалить</a>
+                    <a class="btn btn-success" href="{% url 'edit' post.pk %}">Редактировать</a>
+                </div>
             </div>
         </div>
 {% endblock %}
